# jsk_robot

./: .gitignore  .rosinstall  .travis.rosinstall  .travis.rosinstall.hydro  .travis.rosinstall.indigo  .travis.rosinstall.jade  .travis.rosinstall.kinetic  .travis.rosinstall.melodic  .travis.rosinstall.noetic  .travis.yml  README.md  hoge.txt
doc/: index.rst
jsk_aero_robot/aeroeus/: CMakeLists.txt  README.md  aero-arm-interface.l  aero-deprecated.l  aero-hand.l  aero-interface.l  aero-moveit.l  aero-torso.l  aero-typeF_fcsc-interface.l  aero-utils.l  aero-wheels.l  package.xml
jsk_aero_robot/aeroeus/pre-release/: create-hand-eye-train-data.l  inverse-kinematics-extension.l
jsk_aero_robot/aeroeus/tools/: create-hand-eye-train-data-with-torso.l
jsk_aero_robot/jsk_aero_shop/: CMakeLists.txt  package.xml
jsk_aero_robot/jsk_aero_shop/typeFCESyJSK/: README.md  robot.cfg
jsk_aero_robot/jsk_aero_shop/typeJSK/: aero-wheels.txt  aero_upper.txt  robot.cfg
jsk_aero_robot/jsk_aero_startup/: CMakeLists.txt  README.md  aero.machine  package.xml  sim.machine
jsk_aero_robot/jsk_aero_startup/config/: aero_base_link.yaml  cmd_vel_conf.yaml  ps4eye_default.yaml  ps4eye_left.yaml  ps4eye_right.yaml  scan_filter_conf.yaml  xtion_calib.yaml
jsk_aero_robot/jsk_aero_startup/euslisp/: aero-teleop.l
jsk_aero_robot/jsk_aero_startup/jsk_aero_move_base/: TebLocalPlanner.yaml  amcl.launch  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
jsk_aero_robot/jsk_aero_startup/launch/: aero.launch  aero_base.xml  aero_bringup.launch  aero_lifelog.xml  aero_sensors.sh  aero_sensors.xml  aero_slam.launch  aero_speech.xml  aero_teleop_with_ik.launch  ps4eye_local.launch  ps4eye_remote.launch  scan_filter.launch  sensor_bringup.xml  speech_interaction.launch  speech_recognition.launch  text_to_speech.launch  wheel_with_static_map.sh  wheel_with_static_map.xml  xtion_bringup.launch
jsk_aero_robot/jsk_aero_startup/raw_maps/: room83a3.pgm  room83a3.yaml
jsk_aero_robot/jsk_aero_startup/scripts/: init_on_end.py  init_on_end.sh  interactive_chat_node.py  joy_msg_switcher.py  ps4eye_auto_exposure.sh  seed_command.py  select_scan_and_change_footprint_server.py  text2wave
jsk_aero_robot/jsk_aero_startup/test/: aero.test.xml  roslaunch-check  roslaunch_depends.py
jsk_aero_robot/seedhand_std/: CMakeLists.txt  package.xml
jsk_aero_robot/seedhand_std/src/: SeedHandInterface.cc  SeedHandInterface_test.cc  SeedHandServer.cc
jsk_aero_robot/seedhand_std/srv/: SetHand.srv
jsk_aero_robot/touchence_serial/: CMakeLists.txt  README.md  package.xml
jsk_aero_robot/touchence_serial/src/: touchence_serial_node.cpp
jsk_aero_robot/touchence_serial/udev/: 92-touchence.rules
jsk_aibo_robot/aibo_selenium_ros/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
jsk_aibo_robot/aibo_selenium_ros/node_scripts/: main.py  test_interface.py
jsk_baxter_robot/baxtereus/: .gitignore  CHANGELOG.rst  CMakeLists.txt  baxter-interface.l  baxter-moveit.l  baxter-softhand-interface.l  baxter-util.l  baxter.urdf.xacro  baxter.yaml  package.xml  sample-for-real-baxter.l  speak.l
jsk_baxter_robot/baxtereus/euslisp/: sample-for-real-baxter.l
jsk_baxter_robot/baxtereus/test/: baxter-moveit-nogui.test  baxter-moveit.test  test-baxter-end-coords.l  test-baxter-moveit.l  test-baxter.l  test-baxter.test
jsk_baxter_robot/jsk_baxter_startup/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  baxter.launch  baxter_default.launch  baxter_rosbag_play.launch  baxter_rosbag_record.launch  baxter_softhand.launch  catkin.cmake  manifest.xml  package.xml
jsk_baxter_robot/jsk_baxter_startup/config/: baxter_default.rviz
jsk_baxter_robot/jsk_baxter_startup/env-hooks/: 99.jsk_baxter_startup.bash  99.jsk_baxter_startup.zsh
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_description/: baxter.urdf.xacro  baxter_softhand.urdf.xacro  left_end_effector.urdf.xacro  left_softhand.urdf.xacro  right_end_effector.urdf.xacro  right_softhand.urdf.xacro  softhand.urdf.xacro
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_joy/: baxter_joy.launch
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_lifelog/: baxter_logging.launch  baxter_tweet.launch  db_client.launch  estimated_endeffector.l  mongodb_startup.launch  virtual_force.launch
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_machine/: baxter.machine  env.sh
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_moveit/: moveit.launch
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_sensors/: baxter_realsense_torso.launch  baxter_spherical_kodak.launch  baxter_spherical_stereo.launch  camera_info_fixer.launch  camera_info_fixer.py  d435_torso_pose.yaml  elp_usb.launch  kinect.launch  kinect2.launch  kodak_pixpro.launch  l515_torso_pose.yaml  objectdetection_tf_publisher.py  openni_self_filter.yaml  realsense.launch  respeaker.launch  self_filter.launch  voice.launch  voice_echo.l
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_tools/: initialize_baxter.py  sanity_check_of_head_action_server.py  sanity_check_of_joint_trajectory_action_server.py  xdisplay_image_topic.py
jsk_baxter_robot/jsk_baxter_startup/jsk_baxter_udev/: 99-elp.rules  99-kodak.rules
jsk_baxter_robot/jsk_baxter_startup/test/: check_launch.test
jsk_baxter_robot/jsk_baxter_web/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_denso_robot/cobottaeus/: .gitignore  CMakeLists.txt  cobotta-interface.l  cobotta-oss-interface.l  cobotta-utils.l  cobotta.yaml  package.xml
jsk_denso_robot/jsk_cobotta_startup/: CMakeLists.txt  package.xml
jsk_fetch_robot/fetcheus/: .gitignore  CHANGELOG.rst  CMakeLists.txt  fetch-interface.l  fetch-utils.l  fetch.yaml  package.xml
jsk_fetch_robot/jsk_fetch_accessories/: CMakeLists.txt  package.xml
jsk_fetch_robot/jsk_fetch_diagnosis/: CMakeLists.txt  README.md  package.xml
jsk_fetch_robot/jsk_fetch_gazebo_demo/: CMakeLists.txt  README.md  package.xml
jsk_fetch_robot/jsk_fetch_startup/: CHANGELOG.rst  CMakeLists.txt  README.md  jsk_fetch.machine  package.xml
jsk_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+2247 files in other folders)
