<?xml version="1.0"?>
<package>
  <name>jsk_robot</name>
  <version>1.0.6</version>
  <description>
   <p>Metapackage that contains robot packages for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <url type="repository">https://github.com/jsk-ros-pkg/jsk_robot</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxtereus</run_depend>
  <run_depend>fetcheus</run_depend>
  <run_depend>jsk_201504_miraikan</run_depend>
  <run_depend>jsk_baxter_desktop</run_depend>
  <run_depend>jsk_baxter_startup</run_depend>
  <run_depend>jsk_baxter_web</run_depend>
  <run_depend>jsk_fetch_startup</run_depend>
  <run_depend>jsk_nao_startup</run_depend>
  <run_depend>jsk_pepper_startup</run_depend>
  <run_depend>jsk_pr2_calibration</run_depend>
  <run_depend>jsk_pr2_startup</run_depend>
  <run_depend>jsk_robot_startup</run_depend>
  <run_depend>jsk_robot_utils</run_depend>
  <run_depend>naoeus</run_depend>
  <run_depend>naoqieus</run_depend>
  <run_depend>peppereus</run_depend>
  <run_depend>pr2_base_trajectory_action</run_depend>
  <run_depend>roseus_remote</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
