<?xml version="1.0"?>
<package>
  <name>aeroeus</name>
  <version>0.0.0</version>
  <description>The aeroeus package</description>

  <license>BSD</license>
  <maintainer email="sasabuchi@jsk.t.u-tokyo.ac.jp">
    Kazuhiro Sasabuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>

  <run_depend>roseus</run_depend>

  <export/>
</package>
