<?xml version="1.0"?>
<package>
  <name>aeroeus</name>
  <version>1.1.0</version>
  <description>The aeroeus package</description>

  <license>BSD</license>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">
    Yohei Kakiuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pr2eus</build_depend>
  <!--build_depend>aero_description</build_depend-->

  <run_depend>pr2eus</run_depend>
  <!--build_depend>aero_description</build_depend-->

  <export/>
</package>
