<?xml version="1.0"?>
<package>
  <name>touchence_serial</name>
  <version>0.0.0</version>
  <description>The touchence_serial package</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">taichiH</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>

</package>
