<?xml version="1.0"?>
<package format="2">
  <name>aibo_selenium_ros</name>
  <version>1.1.0</version>
  <description>The aibo_selenium_ros package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>chromium-browser</exec_depend>
  <exec_depend>chromedriver</exec_depend>
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
