<?xml version="1.0"?>
<package>
  <name>baxtereus</name>
  <version>0.0.6</version>
  <description>The baxtereus package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada_urdf</build_depend>
  <build_depend>euscollada</build_depend>
  <!-- <build_depend>baxter_description</build_depend> -->

  <run_depend>collada_urdf</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>

  <export>
  </export>
</package>
