<?xml version="1.0"?>
<package>
  <name>baxtereus</name>
  <version>1.0.9</version>
  <description>The baxtereus package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_description</build_depend>
  <build_depend>collada_urdf</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
