<?xml version="1.0"?>
<package>
  <name>baxtereus</name>
  <version>1.1.0</version>
  <description>The baxtereus package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada_urdf</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>pr2eus</build_depend>
  <!-- <build_depend>baxter_description</build_depend> -->

  <run_depend>collada_urdf</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>jsk_baxter_startup</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>pr2eus_moveit</run_depend>
  <run_depend>rostest</run_depend>

  <test_depend>baxter_core_msgs</test_depend>
  <test_depend>baxter_gazebo</test_depend>
  <test_depend>baxter_sim_controllers</test_depend>
  <test_depend>baxter_sim_io</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>baxter_moveit_config</test_depend>
  <test_depend>rosgraph_msgs</test_depend>

  <export>
  </export>
</package>
