<?xml version="1.0"?>
<package>
  <name>jsk_baxter_startup</name>
  <version>0.0.0</version>
  <description>The jsk_baxter_startup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="inagaki@todo.todo">inagaki</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jsk_baxter_startup</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_description</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>baxter_examples</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>jtalk</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>checkerboard_detector</build_depend>
  <build_depend>topic_tools</build_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>baxter_examples</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>jtalk</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>checkerboard_detector</run_depend>
  <run_depend>topic_tools</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>