<?xml version="1.0"?>
<package>
  <name>cobottaeus</name>
  <version>1.1.0</version>
  <description>The cobottas package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>collada_urdf</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>denso_cobotta_descriptions</build_depend>

  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>denso_cobotta_driver</run_depend>
  <run_depend>denso_cobotta_gripper</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
